--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/outfit": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
     "delaunay-fast": "^1.0.1",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "simplex-noise": "^4.0.3"
